# TileMapRendererExperiments

./: .gitignore  .gitmodules  GrassOnMudTool.lut  README.md  TileMapRendererExperiments.sln
Engine/: Atlas.c  Atlas.h  DynArray.c  (+50 more)
Stardew/: BuildDebug.bat  BuildDebug.sh  BuildRelease.bat  BuildRelease.sh  Build_ConanReleaseInternal.sh  Build_Internal.sh  CMakeLists.txt  GetDependencies.sh  GetDependenciesConan.bat  GetDependenciesConan.sh  GetDependenciesUbuntu.sh  compile_assets.bat  compile_assets.sh  conanfile.txt  out.atlas
Stardew/Assets/: CreateImagefilesJson.py  Engine.tiled-session  Exterior Tiles.json  Farm.json  Farm.tmj  House.json  ImageFiles.json  Interior 2.json  Interior.json  Keymap.json  Outside Objects.json  RoadToTown.json  Terrain and Outside.json  compile_assets.bat  console.lua  console.xml  debug_overlay.lua  debug_overlay.xml  female_walkcycle.tsj  male_walkcycle.tsj  out.atlas  test.lua  test.xml  test2.lua  test2.xml  ui_atlas.atlas  ui_atlas.xml
Stardew/Assets/Image/: OFL.txt  info.txt  readme.txt
Stardew/Assets/Image/2D_Bright_buttons/: buttons.xcf
Stardew/Assets/Image/LPC Submissions/: Interior.psd  Outside Objects.psd  Terrain and Outside.psd
Stardew/Assets/Image/push_and_carry/push and carry/: README
Stardew/Assets/out_rle/: Farm.tilemap  House.tilemap  RoadToTown.tilemap  atlas.xml  main.atlas
Stardew/atlastool/: CMakeLists.txt  main.c
Stardew/engine/: CMakeLists.txt
Stardew/engine/docs/: AssetTools.md  Entities.md  Game.md  UI.md
Stardew/engine/include/: AnimatedSprite.h  AssertLib.h  Atlas.h  BackgroundBoxWidget.h  BinarySerializer.h  BitField2D.h  Camera2D.h  CanvasWidget.h  Components.h  DataNode.h  DefaultEntityFunctions.h  DrawContext.h  DynArray.h  Entities.h  Entity2DCollection.h  EntityQuadTree.h  FileHelpers.h  FreeLookCameraMode.h  Game2DLayer.h  Game2DVertexOutputHelpers.h  GameFramework.h  GameFrameworkEvent.h  Geometry.h  HandleDefs.h  ImageFileRegstry.h  InputContext.h  IntTypes.h  ObjectPool.h  Physics2D.h  PlatformDefs.h  RadioButtonWidget.h  RadioGroupWidget.h  Random.h  RootWidget.h  Scripting.h  SliderWidget.h  Sprite.h  StackPanelWidget.h  StaticColliderEntity.h  StaticWidget.h  (+9 more)
Stardew/engine/include/stb/: stb_image_write.h
Stardew/engine/lib/cglm-0.9.6/: meson.build
Stardew/engine/lib/cglm-0.9.6/win/: cglm.vcxproj  cglm.vcxproj.filters
Stardew/engine/lib/glad/src/: glad.c
Stardew/engine/scripts/: ConvertTiled.py  ExpandAnimations.py  MergeAtlases.py  WidgetHeaderTemplate.txt  WidgetSrcTemplate.txt  test.c
Stardew/engine/src/: CMakeLists.txt  listsrc.bat  main.c
Stardew/engine/src/core/: Atlas.c  BinarySerializer.c  Bitfield2D.c  DataNode.c  DynArray.c  FileHelpers.c  Geometry.c  ImageFileRegstry.c  ObjectPool.c  Random.c  StringKeyHashMap.c  TimerPool.c
Stardew/engine/src/gameframework/: GameFramework.c  GameFrameworkEvent.c
Stardew/engine/src/gameframework/layers/Game2D/: Camera2D.c  DefaultEntityFunctions.c  Entities.c  FreeLookCameraMode.c  Game2DLayer.c  Game2DVertexOutputHelpers.c  Physics2D.c  StaticColliderEntity.c
Stardew/engine/src/gameframework/layers/Game2D/EntitySystem/: Entities.c  Entities2DCollection.c  EntityQuadtree.c
Stardew/engine/src/gameframework/layers/Game2D/EntitySystem/Components/: AnimatedSprite.c  Components.c  Sprite.c
Stardew/engine/src/gameframework/layers/UI/: WidgetVertexOutputHelpers.c  XMLUIGameLayer.c
Stardew/engine/src/gameframework/layers/UI/widgets/: BackgroundBoxWidget.c  CanvasWidget.c  RadioButtonWidget.c  RadioGroupWidget.c  RootWidget.c  SliderWidget.c  StackPanelWidget.c  StaticWidget.c  TextButtonWidget.c  TextEntryWidget.c  TextWidget.c  Widget.c
Stardew/engine/src/input/: InputContext.c
Stardew/engine/src/rendering/: DrawContext.c
Stardew/engine/src/scripting/: Scripting.c
Stardew/enginetest/: CMakeLists.txt  DynArrayTests.cpp  GameFrameworkEventTests.cpp  GameFrameworkTests.cpp  ObjectPoolTests.cpp  StringHashMapTests.cpp  StringHashMapTests.h  main.cpp
Stardew/enginetest/data/: GameFrameworkEventTestUILayer.lua  GameFrameworkEventTestUILayer.xml
Stardew/game/: CMakeLists.txt  Game.md  game_convert_tiled.py  main.c
Stardew/game/include/: WfDebrisField.h  WfEntities.h  WfEnums.h  WfExit.h  WfGameLayer.h  WfGameLayerData.h  WfInit.h  WfLog.h  WfPlayer.h  WfPlayerStart.h  WfRock.h  WfSprites.h  WfTree.h  WfWoodedArea.h  WfWorld.h
Stardew/game/src/: WfEntities.c  WfGameLayer.c  WfGameLayerData.c  WfInit.c  WfSprites.c  WfWorld.c  main.c
Stardew/game/src/entities/: WfDebrisField.c  WfExit.c  WfLog.c  WfPlayer.c  WfPlayerStart.c  WfRock.c  WfTree.c  WfWoodedArea.c
Stardew/glades/include/glad/: glad_es.h
Stardew/glades/src/: glad.c
Stardew/include/: BackgroundBoxWidget.h  CanvasWidget.h  Geometry.h  ImageFileRegstry.h  RadioButtonWidget.h  RadioGroupWidget.h  SharedPtr.h  SliderWidget.h  StackPanelWidget.h  StaticWidget.h  TextButtonWidget.h  TextWidget.h  Widget.h  XMLHelpers.h  XMLUIGameLayer.h  cJSON.h
Stardew/lib/box2d-3.0.0/: #build.sh#
Stardew/lib/freetype-2.13.3/: MSBuild.rsp
Stardew/lib/freetype-2.13.3/objs/x64/Debug/: freetype.lib
Stardew/lib/freetype-2.13.3/objs/x64/Debug/freetype.tlog/: CL.command.1.tlog  freetype.lastbuildstate  rc.write.1.tlog
Stardew/lib/freetype-2.13.3/objs/x64/Release/: freetype.exp
Stardew/lib/freetype-2.13.3/objs/x64/Release/freetype.tlog/: CL.read.1.tlog  freetype.lastbuildstate  link.command.1.tlog  rc.command.1.tlog
Stardew/lib/glad/include/glad/: glad.h
Stardew/lib/xml.c-master/: CMakeLists.txt
Stardew/scripts/: test.h
Stardew/src/: Atlas.c  BackgroundBoxWidget.c  CMakeLists.txt  CanvasWidget.c  DrawContext.c  ImageFileRegstry.c  InputContext.c  RadioButtonWidget.c  RadioGroupWidget.c  Scripting.c  SliderWidget.c  StackPanelWidget.c  StaticWidget.c  TextButtonWidget.c  TextWidget.c  Widget.c  XMLUIGameLayer.c  main.c
Stardew/src/core/: FileHelpers.c  ObjectPool.c
Stardew/src/gameframework/: GameFramework.c
Stardew/src/gameframework/layers/UI/: XMLUIGameLayer.c
Stardew/src/gameframework/layers/UI/widgets/: RootWidget.c
Stardew/src/input/: InputContext.c
(+375 files in other folders)
