add_library( StardewEngine SHARED
core/Atlas.c
core/BinarySerializer.c
core/CtorDtor.c
core/DynArray.c
core/Geometry.c
core/SharedPtr.c
core/FloatingPointLib.c
core/ObjectPool.c
core/FileHelpers.c
core/ImageFileRegstry.c
core/TimerPool.c
core/DataNode.c
core/StringKeyHashMap.c
core/Bitfield2D.c
gameframework/GameFramework.c
gameframework/GameFrameworkEvent.c
gameframework/layers/UI/XMLUIGameLayer.c
gameframework/layers/UI/WidgetVertexOutputHelpers.c
gameframework/layers/UI/widgets/SliderWidget.c
gameframework/layers/UI/widgets/BackgroundBoxWidget.c
gameframework/layers/UI/widgets/StackPanelWidget.c
gameframework/layers/UI/widgets/CanvasWidget.c
gameframework/layers/UI/widgets/StaticWidget.c
gameframework/layers/UI/widgets/TextButtonWidget.c
gameframework/layers/UI/widgets/TextWidget.c
gameframework/layers/UI/widgets/Widget.c
gameframework/layers/UI/widgets/RadioButtonWidget.c
gameframework/layers/UI/widgets/RadioGroupWidget.c
gameframework/layers/UI/widgets/RootWidget.c
gameframework/layers/UI/widgets/TextEntryWidget.c
gameframework/layers/Game2D/Game2DLayer.c
gameframework/layers/Game2D/FreeLookCameraMode.c
gameframework/layers/Game2D/Camera2D.c
gameframework/layers/Game2D/Entities.c
vendor/glad.c
vendor/cJSON.c
rendering/DrawContext.c
scripting/Scripting.c
input/InputContext.c
main.c
)


